--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="site code/styles.css">
-    <script src="site code/script.js" defer></script>
+    <link rel="stylesheet" href="/styles.css">
+    <script src="/script.js" defer></script>
     <title>Swastha Assist</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
 
     <div class="wrapper">
         <section id="hero">
-            <img src="Supplement files/app logo 00.png" alt="Project Logo">
+            <img src="/Supplement files/app logo 00.png" alt="Project Logo">
             <div class="content">
                 <h1>Welcome to Swastha Assist</h1>
                 <p>Empowering you to live a healthier life.</p>
@@ -29,7 +29,7 @@
         </section>
 
         <section class="module-wrapper">
-            <a href="site code/pages/diet.html">
+            <a href="/site code/pages/diet.html">
                 <div class="diet">
                     <h2>Diet</h2>
                 </div>
