--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="wrapper">
         <section id="hero">
-            <img src="Supplement files/app logo 00.png" alt="Project Logo">
+            <img src="Supplement_files/app logo 00.png" alt="Project Logo">
             <div class="content">
                 <h1>Welcome to Swastha Assist</h1>
                 <p>Empowering you to live a healthier life.</p>
@@ -29,22 +29,22 @@
         </section>
 
         <section class="module-wrapper">
-            <a href="site code/pages/diet.html">
+            <a href="pages/diet.html">
                 <div class="diet">
                     <h2>Diet</h2>
                 </div>
             </a>
-            <a href="site code/pages/routine.html">
+            <a href="pages/routine.html">
                 <div class="routine">
                     <h2>Routine</h2>
                 </div>
             </a>
-            <a href="site code/pages/mental_health.html">
+            <a href="pages/mental_health.html">
                 <div class="mental health">
                     <h2>Mental Health</h2>
                 </div>
             </a>
-            <a href="site code/pages/physical_fitness.html">
+            <a href="pages/physical_fitness.html">
                 <div class="physical fitness">
                     <h2>Physical Fitness</h2>
                 </div>
