--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     
         <section id="about">
             <h2>About Us</h2>
-            <p>Your Health Website is dedicated to providing reliable information and resources to help you achieve your health and wellness goals. Organized into four essential sections, our mission is to promote and educate individuals on the principles of living a healthy life. We strive to be the go-to platform that guides and supports people of all ages on their journey towards optimal well-being, making health accessible to everyone in our diverse community</p>
+            <p>Our Team at Swastha Assist is dedicated to providing reliable information and resources to help you achieve your health and wellness goals. Organized into four essential sections, our mission is to promote and educate individuals on the principles of living a healthy life. We strive to be the go-to platform that guides and supports people of all ages on their journey towards optimal well-being, making health accessible to everyone in our diverse community</p>
         </section>
     
         <section id="contact">
