Fixing site code structure

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./indexstyle/styles.css">
     <script src="script.js" defer></script>
     <title>Swastha Assist</title>
 </head>
@@ -29,22 +29,22 @@
         </section>
 
         <section class="module-wrapper">
-            <a href="pages/diet.html">
+            <a href="./diet/diet.html">
                 <div class="diet">
                     <h2>Diet</h2>
                 </div>
             </a>
-            <a href="pages/routine.html">
+            <a href="./Routine/routine.html">
                 <div class="routine">
                     <h2>Routine</h2>
                 </div>
             </a>
-            <a href="pages/mental_health.html">
+            <a href="./MentalHealth/mental_health.html">
                 <div class="mental health">
                     <h2>Mental Health</h2>
                 </div>
             </a>
-            <a href="pages/physical_fitness.html">
+            <a href="./PhysicalFitness/physical_fitness.html">
                 <div class="physical fitness">
                     <h2>Physical Fitness</h2>
                 </div>
