--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </section>
 
         <section class="module-wrapper">
-            <a href="diet/diet.html">
+            <a href="./diet/index.html">
                 <div class="diet">
                     <h2>Diet</h2>
                 </div>
