--- a/Routine/routine.html
+++ b/Routine/routine.html
@@ -1,13 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Routine</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Routine Planner</title>
+  <link rel="stylesheet" href="style.scss">
 </head>
 <body>
-    <h1>Routine Page</h1>
-    <p>Under Maintainance</p>
+  <header>
+    <h1>Routine Planner</h1>
+  </header>
+  <main>
+    <div class="container">
+      <table>
+        <thead>
+          <tr>
+            <th>Activity Blocks</th>
+            <th>From</th>
+            <th>To</th>
+            <th>Time Spent (In Hours)</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Wake Up</td>
+            <td><input type="time" name="from_wake_up"></td>
+            <td><input type="time" name="to_wake_up"></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Workout</td>
+            <td><input type="time" name="from_workout"></td>
+            <td><input type="time" name="to_workout"></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Breakfast</td>
+            <td><input type="time" name="from_breakfast"></td>
+            <td><input type="time" name="to_breakfast"></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Yoga & Meditation</td>
+            <td><input type="time" name="from_yoga"></td>
+            <td><input type="time" name="to_yoga"></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>School</td>
+            <td><input type="time" name="from_school"></td>
+            <td><input type="time" name="to_school"></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Lunch</td>
+            <td><input type="time" name="from_lunch"></td>
+            <td><input type="time" name="to_lunch"></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Self Study</td>
+            <td><input type="time" name="from_self_study"></td>
+            <td><input type="time" name="to_self_study"></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Relaxation</td>
+            <td><input type="time" name="from_relaxation"></td>
+            <td><input type="time" name="to_relaxation"></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Other Activities</td>
+            <td><input type="time" name="from_other"></td>
+            <td><input type="time" name="to_other"></td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="buttons">
+      <button id="analyze-btn">Analyze Routine</button>
+      <button id="submit-btn">Submit</button>
+    </div>
+  </main>
+  <footer></footer>
+  <script src="script.js"></script>
 </body>
 </html>
