--- a/PhysicalFitness/Worksheet/index.html
+++ b/PhysicalFitness/Worksheet/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Health Worksheet for Sanitation and Hygiene</title>
-    <link rel="stylesheet" href="styles_hw.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <nav>
+      <div class="logo">
+        <img src="logo01.jpeg" alt="Logo" />
+      </div>
       <div>
         <h1>Health Worksheet for Sanitation and Hygiene</h1>
       </div>
@@ -18,66 +21,65 @@
     </nav>
 
     <div class="container">
-      <form action="#" method="post">
-        <h1>Health Worksheet</h1>
+      <form id="health-form" action="#" method="post">
+        <h2>Health Worksheet</h2>
         <div class="question">
           <label for="q1"
             >1.) Do you wash your hands at least for 20 seconds?</label
-          >
-          <br />
+          ><br />
           <input type="radio" id="q1_yes" name="q1" value="yes" />
-          <label for="q1_yes">Yes</label>
+          <label for="q1_yes" class="radio-button">Yes</label>
           <input type="radio" id="q1_no" name="q1" value="no" />
-          <label for="q1_no">No</label>
+          <label for="q1_no" class="radio-button">No</label>
         </div>
         <div class="question">
           <label for="q2">2.) Do you carry a hand sanitizer with you?</label
           ><br />
           <input type="radio" id="q2_yes" name="q2" value="yes" />
-          <label for="q2_yes">Yes</label>
+          <label for="q2_yes" class="radio-button">Yes</label>
           <input type="radio" id="q2_no" name="q2" value="no" />
-          <label for="q2_no">No</label>
+          <label for="q2_no" class="radio-button">No</label>
         </div>
         <div class="question">
           <label for="q3"
             >3.) Does your hand sanitizer contain 60% alcohol?</label
           ><br />
           <input type="radio" id="q3_yes" name="q3" value="yes" />
-          <label for="q3_yes">Yes</label>
+          <label for="q3_yes" class="radio-button">Yes</label>
           <input type="radio" id="q3_no" name="q3" value="no" />
-          <label for="q3_no">No</label>
+          <label for="q3_no" class="radio-button">No</label>
         </div>
         <div class="question">
           <label for="q4">4.) Do you bathe daily?</label><br />
           <input type="radio" id="q4_yes" name="q4" value="yes" />
-          <label for="q4_yes">Yes</label>
+          <label for="q4_yes" class="radio-button">Yes</label>
           <input type="radio" id="q4_no" name="q4" value="no" />
-          <label for="q4_no">No</label>
+          <label for="q4_no" class="radio-button">No</label>
         </div>
         <div class="question">
           <label for="q5">5.) Do you brush your teeth twice a day?</label><br />
           <input type="radio" id="q5_yes" name="q5" value="yes" />
-          <label for="q5_yes">Yes</label>
+          <label for="q5_yes" class="radio-button">Yes</label>
           <input type="radio" id="q5_no" name="q5" value="no" />
-          <label for="q5_no">No</label>
+          <label for="q5_no" class="radio-button">No</label>
         </div>
         <div class="question">
           <label for="q6"
             >6.) Do you wash your hands before and after every meal?</label
           ><br />
           <input type="radio" id="q6_yes" name="q6" value="yes" />
-          <label for="q6_yes">Yes</label>
+          <label for="q6_yes" class="radio-button">Yes</label>
           <input type="radio" id="q6_no" name="q6" value="no" />
-          <label for="q6_no">No</label>
+          <label for="q6_no" class="radio-button">No</label>
         </div>
         <div class="question">
           <label for="q7"
             >7.) Do you throw garbage in the garbage truck once a day?</label
           ><br />
           <input type="radio" id="q7_yes" name="q7" value="yes" />
-          <label for="q7_yes">Yes</label>
+          <label for="q7_yes" class="radio-button">Yes</label>
           <input type="radio" id="q7_no" name="q7" value="no" />
-          <label for="q7_no">No</label>
+          <label for="q7_no" class="radio-button">No</label>
         </div>
         <div class="question">
           <label for="q8"
@@ -85,18 +87,28 @@
             prevent the transmission of disease?</label
           ><br />
           <input type="radio" id="q8_yes" name="q8" value="yes" />
-          <label for="q8_yes">Yes</label>
+          <label for="q8_yes" class="radio-button">Yes</label>
           <input type="radio" id="q8_no" name="q8" value="no" />
-          <label for="q8_no">No</label>
+          <label for="q8_no" class="radio-button">No</label>
         </div>
         <div class="question">
           <label for="q9"
             >9.) Is washing your hands a habit that you do often?</label
           ><br />
           <input type="radio" id="q9_yes" name="q9" value="yes" />
-          <label for="q9_yes">Yes</label>
+          <label for="q9_yes" class="radio-button">Yes</label>
           <input type="radio" id="q9_no" name="q9" value="no" />
-          <label for="q9_no">No</label>
+          <label for="q9_no" class="radio-button">No</label>
+        </div>
+        <div class="question">
+          <label for="q10"
+            >10.) Do you use a tissue or elbow to cover your mouth when coughing
+            or sneezing?</label
+          ><br />
+          <input type="radio" id="q10_yes" name="q10" value="yes" />
+          <label for="q10_yes" class="radio-button">Yes</label>
+          <input type="radio" id="q10_no" name="q10" value="no" />
+          <label for="q10_no" class="radio-button">No</label>
         </div>
         <div class="button-group">
           <button type="submit">Submit</button>
@@ -104,5 +116,7 @@
         </div>
       </form>
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
