Fix: logo across pages

--- a/PhysicalFitness/index.html
+++ b/PhysicalFitness/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <nav>
+      <div class="logo">
+        <img src="logo01.jpeg" alt="Logo" />
+      </div>
       <div>
         <h1>Health Assessment</h1>
       </div>
