--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <div class="header">
       <h1>Swastha Assist</h1>
       <nav>
+        <div class="logo">
+          <img src="logo01.jpeg" alt="Logo" />
+        </div>
         <ul>
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
