--- a/PhysicalFitness/SleepForm/suggestions.html
+++ b/PhysicalFitness/SleepForm/suggestions.html
@@ -9,6 +9,10 @@
   <body>
     <nav>
       <div>
+        <div class="logo">
+          <img src="logo01.jpeg" alt="Logo" />
+        </div>
+        <div>
         <h1>Physical Fitness : Advisory</h1>
       </div>
       <ul>
